<resources>
    <string name="app_name">HET Assist</string>
    <string name="action_settings">Settings</string>
    <string name="action_status">Status</string>
    <string name="action_reconnect">Add/Remove Device</string>
    <string name="signin">Please Sign In</string>
    <string name="loginmsg">A Google Sign-In is required in order to use this application.</string>
    <string name="plsbt">Please Select HET Devices To Connect To</string>
    <string name="plsRestart">If you are reconnecting to an HET device, please be sure to restart it before connecting again</string>
    <string name="btexplain">This app is designed to work with an ASSIST HET device. Press the button below to choose a device to work with.</string>
    <string name="bl_not_supported">Bluetooth is not supported on this device. We apologize, but this app cannot function without Bluetooth.</string>
    <string name="ble_not_supported">Bluetooth Low Energy is not supported on this device. We apologize, but this app cannot function without BLE.</string>
    <string name="assistImageDescription">Logo for the ASSIST research group</string>
    <string name="btSymbolDesc">The Bluetooth logo</string>
    <string name="unknowndevice">Unknown Device</string>
    <string name="scanButtonText">Scan Now</string>
    <string name="btStopScanButtonText">Refresh</string>
    <string name="allDevicesSelected">Continue</string>
    <string name="btConnected">BLE Device Connected</string>
    <string name="btDisconnected">BLE Device Disconnected</string>
    <string-array name="graph_increments">
        <item>Live</item>
        <item>Minute</item>
        <item>Hour</item>
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
    </string-array>
    <string name="dashboard_bpm_title">BPM</string>
    <string name="dashboard_hrv_title">HRV</string>
    <string name="dashboard_ozone_title">Ozone</string>
    <string name="hr">Heart Rate</string>
    <string name="hrv">Heart Rate Variability</string>
    <string name="env">Ozone</string>
    <string name="pickOneDummy">No devices checked. Please check at least one before continuing.</string>
    <string name="tooManyDevices">More than 2 devices selected. Please select at most 2.</string>
</resources>
