<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/plsbt"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btScanButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="@android:dimen/thumbnail_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="onClick"
        android:text="@string/scanButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reconnect_info" />

    <Button
        android:id="@+id/btRefresh"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="@android:dimen/thumbnail_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:onClick="onClick"
        android:text="@string/btStopScanButtonText"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reconnect_info" />

    <Button
        android:id="@+id/btDone"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="@android:dimen/thumbnail_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:onClick="onClick"
        android:text="@string/allDevicesSelected"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reconnect_info" />

    <ListView
        android:id="@+id/gatt_devices_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:choiceMode="multipleChoice"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/btScanButton"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/reconnect_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/plsRestart"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>